# LLM

./: .gitignore  README.md  config.py  data.py  inference.py  main.py  model.py  model_run.py  model_run_utils.py  playground.py  pyproject.toml  utils.py
data/: adventures_of_sherlock_holmes.txt
data/sherlock_holmes/: return_of_sherlock_holmes.txt
src/: main.py
src/data/sherlock_holmes/: valley_of_fear.txt
src/llm/: config.py  data.py  inference.py  main.py  model.py  model_run.py  model_run_utils.py  playground.py
